# ID-Card-Generator-Automation

./: README.md  main.py  make_blank_id.py  pyproject.toml
data/: employees.csv
